phone call functionality

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </ul>
                 </nav>
                 <div class="header-cta">
-                    <button class="btn btn-primary" data-en="Call us now" data-es="Llámanos ahora">Call us now</button>
+                    <a href="tel:3057098085" class="btn btn-primary" data-en="Call us now" data-es="Llámanos ahora">Call us now</a>
                 </div>
                 <div class="mobile-menu-toggle">
                     <span></span>
