--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo">
-                    <h1>Logo</h1>
+                    <img src="images/DestinationLogo.png" alt="DestinationBuyRent Logo" class="logo-image">
                 </div>
                 <nav class="nav">
                     <ul class="nav-list">
@@ -268,7 +268,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section footer-logo">
-                    <h1 class="footer-logo-text">Logo</h1>
+                    <img src="images/DestinationLogo.png" alt="DestinationBuyRent Logo" class="footer-logo-image">
                 </div>
                 <div class="footer-section">
                     <h3 data-en="Contact Information" data-es="Información de Contacto">Contact Information</h3>
