--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                         <li><a href="#contact" class="nav-link" data-en="Contact" data-es="Contacto">Contact</a></li>
                         <li class="language-toggle">
                             <button class="lang-btn" id="langToggle">
-                                <img src="images/Flag-uk.png" alt="UK Flag" class="flag-icon" id="ukFlag">
+                                <img src="images/Flag-us.png" alt="US Flag" class="flag-icon" id="ukFlag">
                                 <img src="images/Flag-es.png" alt="Spain Flag" class="flag-icon" id="spainFlag" style="display: none;">
                             </button>
                         </li>
                     </ul>
                 </nav>
                 <div class="header-cta">
-                    <a href="tel:3057098085" class="btn btn-primary" data-en="Call us now" data-es="Llámanos ahora">Call us now</a>
+                    <a href="tel:9548713363" class="btn btn-primary" data-en="Call us now" data-es="Llámanos ahora">Call us now</a>
                 </div>
                 <div class="mobile-menu-toggle">
                     <span></span>
@@ -137,15 +137,15 @@
                     <div class="credentials">
                         <div class="credential-item">
                             <i class="fas fa-shield-alt"></i>
-                            <span data-en="Officially Licensed Loan Officer (NMLS #2597615) - (#371526)" data-es="Oficial de Préstamos con Licencia Oficial (NMLS #2597615) - (#371526)">Officially Licensed Loan Officer (NMLS #2597615) - (#371526)</span>
+                            <span data-en="Jose L. Figueroa, NMLS #371526, Licensed Mortgage Loan Originator in Florida" data-es="Jose L. Figueroa, NMLS #371526, Agente hipotecario con licencia en Florida">Jose L. Figueroa, NMLS #371526, Licensed Mortgage Loan Originator in Florida</span>
                         </div>
                         <div class="credential-item">
                             <i class="fas fa-certificate"></i>
-                            <span data-en="Recognized by FHA, Fannie Mae, Freddie Mac, USDA, VA and Non-QM programs" data-es="Reconocido por programas FHA, Fannie Mae, Freddie Mac, USDA, VA y Non-QM">Recognized by FHA, Fannie Mae, Freddie Mac, USDA, VA and Non-QM programs</span>
+                            <span data-en="FHA, Fannie Mae, Freddie Mac, VA, USDA, Non-Conforming programs" data-es="FHA, Fannie Mae, Freddie Mac, VA, USDA, Préstamos no conformes">FHA, Fannie Mae, Freddie Mac, VA, USDA, Non-Conforming programs</span>
                         </div>
                         <div class="credential-item">
-                            <i class="fas fa-award"></i>
-                            <span data-en="Member of national and local mortgage associations" data-es="Miembro de asociaciones hipotecarias nacionales y locales">Member of national and local mortgage associations</span>
+                            <i class="fas fa-handshake"></i>
+                            <span data-en="Member of national and local mortgage and real estate associations" data-es="Miembro de asociaciones hipotecarias y de bienes raíces nacionales y locales">Member of national and local mortgage and real estate associations</span>
                         </div>
                         <div class="credential-item">
                             <i class="fas fa-users"></i>
@@ -210,7 +210,7 @@
         <div class="container">
             <div class="cta-content">
                 <h3 data-en="Whether you're buying or renting, DestinationBuyRent.com is your trusted partner." data-es="Ya sea que estés comprando o alquilando, DestinationBuyRent.com es tu socio de confianza.">Whether you're buying or renting, DestinationBuyRent.com is your trusted partner.</h3>
-                <a href="tel:3057098085" class="btn btn-primary btn-large" data-en="👉 Contact Us Today" data-es="👉 Contáctanos Hoy">👉 Contact Us Today</a>
+                <a href="tel:9548713363" class="btn btn-primary btn-large" data-en="👉 Contact Us Today" data-es="👉 Contáctanos Hoy">👉 Contact Us Today</a>
             </div>
         </div>
     </section>
@@ -273,7 +273,7 @@
                 <div class="footer-section">
                     <h3 data-en="Contact Information" data-es="Información de Contacto">Contact Information</h3>
                     <div class="contact-info">
-                        <p><i class="fas fa-phone"></i> (305) 209 8085</p>
+                        <p><i class="fas fa-phone"></i> (954) 871-3363</p>
                         <p><i class="fas fa-envelope"></i> info@destinationbuyrent.com</p>
                         <p><i class="fas fa-globe"></i> DestinationBuyRent.com</p>
                         <p><i class="fas fa-map-marker-alt"></i> Miami, FL</p>
@@ -287,14 +287,6 @@
                         <li><a href="#services" data-en="Services" data-es="Servicios">Services</a></li>
                         <li><a href="#about" data-en="About Us" data-es="Nosotros">About Us</a></li>
                     </ul>
-                </div>
-                <div class="footer-section">
-                    <h3 data-en="Follow Us" data-es="Síguenos">Follow Us</h3>
-                    <div class="social-links">
-                        <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
-                    </div>
                 </div>
             </div>
             <div class="footer-bottom">
