--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h2 class="hero-title" data-en="Your Trusted Destination to Buy or Rent Your Dream Home" data-es="Tu Destino de Confianza para Comprar o Alquilar tu Casa Soñada">Your Trusted Destination to Buy or Rent Your Dream Home</h2>
+                    <h2 class="hero-title" data-en="Whether you're<br>buying or renting, DestinationBuyRent.com is your trusted partner" data-es="Ya sea que estés comprando o alquilando, DestinationBuyRent.com es tu socio de confianza">Whether you're<br>buying or renting, DestinationBuyRent.com is your trusted partner</h2>
                     <p class="hero-subtitle" data-en="At DestinationBuyRent.com, we simplify the process of buying or renting. From credit guidance to closing the deal, we make sure your journey to a new home is smooth and stress-free." data-es="En DestinationBuyRent.com, simplificamos el proceso de compra o alquiler. Desde orientación crediticia hasta cerrar el trato, nos aseguramos de que tu viaje hacia una nueva casa sea suave y sin estrés.">At DestinationBuyRent.com, we simplify the process of buying or renting. From credit guidance to closing the deal, we make sure your journey to a new home is smooth and stress-free.</p>
-                    <button class="btn btn-primary btn-large" data-en="👉 Start Your Journey Today" data-es="👉 Comienza tu Viaje Hoy">👉 Start Your Journey Today</button>
+                    <button class="btn btn-primary btn-large" data-en="👉 Start Your Journey Today" data-es="👉 Empieza tu proceso hoy">👉 Start Your Journey Today</button>
                 </div>
                 <div class="hero-image">
                     <!-- Carousel will be populated by JavaScript -->
@@ -73,6 +73,13 @@
                 <p data-en="Comprehensive solutions to make your home buying or renting journey successful" data-es="Soluciones integrales para hacer exitoso tu viaje de compra o alquiler de casa">Comprehensive solutions to make your home buying or renting journey successful</p>
             </div>
             <div class="services-grid">
+                <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fas fa-handshake"></i>
+                    </div>
+                    <h3 data-en="Flexible Loan Options" data-es="Opciones de Préstamo Flexibles">Flexible Loan Options</h3>
+                    <p data-en="FHA, Conventional, Non-QM, DSCR, and more options tailored to your specific needs." data-es="FHA, Convencional, Non-QM, DSCR y más opciones adaptadas a tus necesidades específicas.">FHA, Conventional, Non-QM, DSCR, and more options tailored to your specific needs.</p>
+                </div>
                 <div class="service-card">
                     <div class="service-icon">
                         <i class="fas fa-credit-card"></i>
@@ -94,13 +101,6 @@
                     <h3 data-en="Personalized Guidance" data-es="Orientación Personalizada">Personalized Guidance</h3>
                     <p data-en="Clear explanations and support tailored for buyers, renters, or investors at every step." data-es="Explicaciones claras y apoyo adaptado para compradores, inquilinos o inversores en cada paso.">Clear explanations and support tailored for buyers, renters, or investors at every step.</p>
                 </div>
-                <div class="service-card">
-                    <div class="service-icon">
-                        <i class="fas fa-handshake"></i>
-                    </div>
-                    <h3 data-en="Flexible Loan Options" data-es="Opciones de Préstamo Flexibles">Flexible Loan Options</h3>
-                    <p data-en="FHA, Conventional, Non-QM, DSCR, and more options tailored to your specific needs." data-es="FHA, Convencional, Non-QM, DSCR y más opciones adaptadas a tus necesidades específicas.">FHA, Conventional, Non-QM, DSCR, and more options tailored to your specific needs.</p>
-                </div>
             </div>
         </div>
     </section>
@@ -120,7 +120,7 @@
         <div class="container">
             <div class="section-header">
                 <h2 data-en="Why Choose Us" data-es="Por Qué Elegirnos">Why Choose Us</h2>
-                <p data-en="Trust, expertise, and personalized support for your home journey" data-es="Confianza, experiencia y apoyo personalizado para tu viaje hacia el hogar">Trust, expertise, and personalized support for your home journey</p>
+                <p data-en="Trust, expertise, and personalized support for your home journey with over 30 years of experience" data-es="Confianza, experiencia y apoyo personalizado para tu viaje hacia el hogar con más de 30 años de experiencia">Trust, expertise, and personalized support for your home journey with <strong>over 30 years of experience</strong></p>
             </div>
             <div class="why-choose-content">
                 <div class="advantages">
@@ -149,7 +149,7 @@
                         </div>
                         <div class="credential-item">
                             <i class="fas fa-users"></i>
-                            <span data-en="Trusted by thousands of first-time buyers & investors in South Florida" data-es="Confiado por miles de compradores primerizos e inversores en el Sur de Florida">Trusted by thousands of first-time buyers & investors in South Florida</span>
+                            <span data-en="Trusted by thousands of first-time home buyers, renters & investors in South Florida" data-es="Confiado por miles de compradores primerizos de casas, inquilinos e inversores en el Sur de Florida">Trusted by thousands of first-time home buyers, renters & investors in South Florida</span>
                         </div>
                     </div>
                 </div>
@@ -209,7 +209,7 @@
     <section class="cta-section cta-testimonials">
         <div class="container">
             <div class="cta-content">
-                <h3 data-en="Whether you're buying or renting, DestinationBuyRent.com is your trusted partner." data-es="Ya sea que estés comprando o alquilando, DestinationBuyRent.com es tu socio de confianza.">Whether you're buying or renting, DestinationBuyRent.com is your trusted partner.</h3>
+                <h3 data-en="Your Trusted Destination to Buy or Rent Your Dream Home" data-es="Tu destino de confianza para comprar o alquilar la casa de tus sueños.">Your Trusted Destination to Buy or Rent Your Dream Home</h3>
                 <a href="tel:9548713363" class="btn btn-primary btn-large" data-en="👉 Contact Us Today" data-es="👉 Contáctanos Hoy">👉 Contact Us Today</a>
             </div>
         </div>
@@ -226,7 +226,7 @@
                 <div class="faq-item">
                     <div class="faq-question">
                         <h3 data-en="Do I need high credit to buy a house?" data-es="¿Necesito un crédito alto para comprar una casa?">Do I need high credit to buy a house?</h3>
-                        <i class="fas fa-chevron-down"></i>
+                        <span class="faq-close-icon">×</span>
                     </div>
                     <div class="faq-answer">
                         <p data-en="Not always. We'll review your situation and give you clear steps to improve and qualify." data-es="No siempre. Revisaremos tu situación y te daremos pasos claros para mejorar y calificar.">Not always. We'll review your situation and give you clear steps to improve and qualify.</p>
@@ -235,7 +235,7 @@
                 <div class="faq-item">
                     <div class="faq-question">
                         <h3 data-en="Can I rent while preparing to buy?" data-es="¿Puedo alquilar mientras me preparo para comprar?">Can I rent while preparing to buy?</h3>
-                        <i class="fas fa-chevron-down"></i>
+                        <span class="faq-close-icon">×</span>
                     </div>
                     <div class="faq-answer">
                         <p data-en="Yes! DestinationBuyRent.com helps with both renting and planning your path to ownership." data-es="¡Sí! DestinationBuyRent.com te ayuda tanto con el alquiler como con la planificación de tu camino hacia la propiedad.">Yes! DestinationBuyRent.com helps with both renting and planning your path to ownership.</p>
@@ -244,7 +244,7 @@
                 <div class="faq-item">
                     <div class="faq-question">
                         <h3 data-en="How do I get started?" data-es="¿Cómo empiezo?">How do I get started?</h3>
-                        <i class="fas fa-chevron-down"></i>
+                        <span class="faq-close-icon">×</span>
                     </div>
                     <div class="faq-answer">
                         <p data-en="Simply contact us, provide basic documents, and we'll guide you from there." data-es="Simplemente contáctanos, proporciona documentos básicos y te guiaremos desde ahí.">Simply contact us, provide basic documents, and we'll guide you from there.</p>
@@ -253,7 +253,7 @@
                 <div class="faq-item">
                     <div class="faq-question">
                         <h3 data-en="What areas do you serve?" data-es="¿Qué áreas sirven?">What areas do you serve?</h3>
-                        <i class="fas fa-chevron-down"></i>
+                        <span class="faq-close-icon">×</span>
                     </div>
                     <div class="faq-answer">
                         <p data-en="We proudly serve Miami-Dade, Broward, Palm Beach, and surrounding areas of South Florida communities." data-es="Servimos con orgullo a Miami-Dade, Broward, Palm Beach y las áreas circundantes de las comunidades del Sur de Florida.">We proudly serve Miami-Dade, Broward, Palm Beach, and surrounding areas of South Florida communities.</p>
