--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <section class="cta-section cta-services">
         <div class="container">
             <div class="cta-content">
-                <h3 data-en="Find out if you qualify to buy or rent today—your dream home is closer than you think." data-es="Descubre si calificas para comprar o alquilar hoy—tu casa soñada está más cerca de lo que piensas.">Find out if you qualify to buy or rent today—your dream home is closer than you think.</h3>
+                <h3 data-en="Find out if you qualify to buy or rent today, your dream home is closer than you think." data-es="Descubre si calificas para comprar o alquilar hoy, tu casa soñada está más cerca de lo que piensas.">Find out if you qualify to buy or rent today, your dream home is closer than you think.</h3>
                 <button type="button" class="btn btn-primary btn-large" data-en="👉 Check Your Eligibility Now" data-es="👉 Verifica tu Elegibilidad Ahora">👉 Check Your Eligibility Now</button>
             </div>
         </div>
