--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h2 class="hero-title" data-en="Whether you're<br>buying or renting, DestinationBuyRent.com is your trusted partner" data-es="Ya sea que estés comprando o alquilando, DestinationBuyRent.com es tu socio de confianza">Whether you're<br>buying or renting, DestinationBuyRent.com is your trusted partner</h2>
+                    <h2 class="hero-title" data-en="Whether you're<br>buying or renting, <span class='no-wrap'>DestinationBuyRent.com</span> is your trusted partner" data-es="Ya sea que estés comprando o alquilando, <span class='no-wrap'>DestinationBuyRent.com</span> es tu socio de confianza">Whether you're<br>buying or renting, <span class='no-wrap'>DestinationBuyRent.com</span> is your trusted partner</h2>
                     <p class="hero-subtitle" data-en="At DestinationBuyRent.com, we simplify the process of buying or renting. From credit guidance to closing the deal, we make sure your journey to a new home is smooth and stress-free." data-es="En DestinationBuyRent.com, simplificamos el proceso de compra o alquiler. Desde orientación crediticia hasta cerrar el trato, nos aseguramos de que tu viaje hacia una nueva casa sea suave y sin estrés.">At DestinationBuyRent.com, we simplify the process of buying or renting. From credit guidance to closing the deal, we make sure your journey to a new home is smooth and stress-free.</p>
-                    <button class="btn btn-primary btn-large" data-en="👉 Start Your Journey Today" data-es="👉 Empieza tu proceso hoy">👉 Start Your Journey Today</button>
+                    <button class="btn btn-primary btn-large" data-en="Start Your Journey Today" data-es="Empieza tu proceso hoy">Start Your Journey Today</button>
                 </div>
                 <div class="hero-image">
                     <!-- Carousel will be populated by JavaScript -->
@@ -110,7 +110,7 @@
         <div class="container">
             <div class="cta-content">
                 <h3 data-en="Find out if you qualify to buy or rent today, your dream home is closer than you think." data-es="Descubre si calificas para comprar o alquilar hoy, tu casa soñada está más cerca de lo que piensas.">Find out if you qualify to buy or rent today, your dream home is closer than you think.</h3>
-                <button type="button" class="btn btn-primary btn-large" data-en="👉 Check Your Eligibility Now" data-es="👉 Verifica tu Elegibilidad Ahora">👉 Check Your Eligibility Now</button>
+                <button type="button" class="btn btn-primary btn-large" data-en="Check Your Eligibility Now" data-es="Verifica tu Elegibilidad Ahora">Check Your Eligibility Now</button>
             </div>
         </div>
     </section>
@@ -167,7 +167,7 @@
             <div class="testimonials-grid">
                 <div class="testimonial-card">
                     <div class="author-avatar">
-                        <img src="images/review1.png" alt="Laura T. Profile" class="profile-image">
+                        <img src="images/review1.jpg" alt="Laura T. Profile" class="profile-image">
                     </div>
                     <div class="author-info">
                         <h4 data-en="Laura T." data-es="Laura T.">Laura T.</h4>
@@ -191,7 +191,7 @@
                 </div>
                 <div class="testimonial-card">
                     <div class="author-avatar">
-                        <img src="images/review3.png" alt="Andres G. Profile" class="profile-image">
+                        <img src="images/review3.jpg" alt="Andres G. Profile" class="profile-image">
                     </div>
                     <div class="author-info">
                         <h4 data-en="Andres G." data-es="Andres G.">Andres G.</h4>
@@ -210,7 +210,7 @@
         <div class="container">
             <div class="cta-content">
                 <h3 data-en="Your Trusted Destination to Buy or Rent Your Dream Home" data-es="Tu destino de confianza para comprar o alquilar la casa de tus sueños.">Your Trusted Destination to Buy or Rent Your Dream Home</h3>
-                <a href="tel:9548713363" class="btn btn-primary btn-large" data-en="👉 Contact Us Today" data-es="👉 Contáctanos Hoy">👉 Contact Us Today</a>
+                <a href="tel:9548713363" class="btn btn-primary btn-large" data-en="Contact Us Today" data-es="Contáctanos Hoy">Contact Us Today</a>
             </div>
         </div>
     </section>
@@ -269,6 +269,7 @@
             <div class="footer-content">
                 <div class="footer-section footer-logo">
                     <img src="images/DestinationLogo.png" alt="DestinationBuyRent Logo" class="footer-logo-image">
+                    <p class="footer-slogan" data-en="Till you get your keys!" data-es="¡Hasta que tengas tus llaves!">Till you get your keys!</p>
                 </div>
                 <div class="footer-section">
                     <h3 data-en="Contact Information" data-es="Información de Contacto">Contact Information</h3>
